--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,38 @@
-# Compiled class file
-*.class
+# sublime text files
+*.sublime*
+*.*~*.TMP
 
-# Log file
-*.log
+# temp files
+.DS_Store
+Thumbs.db
+Desktop.ini
+npm-debug.log
+lerna-debug.log
 
-# BlueJ files
-*.ctxt
+# project files
+.project
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# vim swap files
+*.sw*
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# emacs temp files
+*~
+\#*#
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# project ignores
+!.gitkeep
+*__temp
+node_modules
+docs
+coverage
+.nyc_output
+lib
+dist
+bundles/*/*.d.ts
+
+# jetBrains IDE ignores
+.idea
+
+# VSCode ignores
+.vscode
+pixi.code-workspace
